--- a/config/default/core.entity_form_display.block_content.text.default.yml
+++ b/config/default/core.entity_form_display.block_content.text.default.yml
@@ -5,7 +5,7 @@ dependencies:
   config:
     - block_content.type.text
     - field.field.block_content.text.field_description
-    - field.field.block_content.text.field_frame_background
+    - field.field.block_content.text.field_frame
     - field.field.block_content.text.field_heading
     - field.field.block_content.text.field_p_link
   module:
@@ -50,11 +50,12 @@ content:
       allowed_formats:
         hide_help: '1'
         hide_guidelines: '1'
-  field_frame_background:
-    type: options_select
-    weight: 1
+  field_frame:
+    type: boolean_checkbox
+    weight: 26
     region: content
-    settings: {  }
+    settings:
+      display_label: true
     third_party_settings: {  }
   field_heading:
     type: string_textfield
