--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "drupal/entity_browser": "^2.5",
     "drupal/entity_embed": "^1.0",
     "drupal/environment_indicator": "~4.0.0",
+    "drupal/eu_cookie_compliance": "^1.19",
     "drupal/fast_404": "2.x-dev",
     "drupal/field_group": "^3.0",
     "drupal/field_hidden": "^2.0",
