--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -6,6 +6,7 @@ dependencies:
     - filter.format.basic_html
     - filter.format.simple_html
   module:
+    - eu_cookie_compliance
     - filter
     - media
     - shortcut
@@ -19,6 +20,7 @@ is_admin: false
 permissions:
   - 'access content'
   - 'access shortcuts'
+  - 'display eu cookie compliance popup'
   - 'use text format basic_html'
   - 'use text format simple_html'
   - 'view media'
