COD-41: Set image for the text-with-media component as required

--- a/config/default/field.field.block_content.text_with_media.field_media.yml
+++ b/config/default/field.field.block_content.text_with_media.field_media.yml
@@ -12,7 +12,7 @@ entity_type: block_content
 bundle: text_with_media
 label: Image
 description: ''
-required: false
+required: true
 translatable: true
 default_value: {  }
 default_value_callback: ''
