--- a/composer.json
+++ b/composer.json
@@ -1,250 +1,210 @@
 {
-  "name": "drupal/drupal.nl",
-  "type": "project",
-  "description": "Drupal.nl project",
-  "license": "GPL-2.0-or-later",
-  "require": {
-    "bower-asset/chosen": "^1.8",
-    "bower-asset/lazysizes": "^5.2",
-    "composer/installers": "^1.10",
-    "cweagans/composer-patches": "~1.0",
-    "drupal/address": "^1.0",
-    "drupal/address_map_link": "^1.2",
-    "drupal/admin_toolbar": "^3.0",
-    "drupal/advagg": "^4.0",
-    "drupal/allowed_formats": "^1.1",
-    "drupal/backup_migrate": "^5.0@RC",
-    "drupal/better_exposed_filters": "^5.0@beta",
-    "drupal/block_field": "^1.0@alpha",
-    "drupal/chosen": "^3.0",
-    "drupal/ckeditorheight": "^1.0",
-    "drupal/components": "^2.2",
-    "drupal/config_update": "^1.0",
-    "drupal/core-composer-scaffold": "^9.3",
-    "drupal/core-recommended": "^9.3",
-    "drupal/csv_serialization": "^2.0@beta",
-    "drupal/devel": "^4.0",
-    "drupal/draggableviews": "^2.0",
-    "drupal/embed": "^1.0",
-    "drupal/entity": "^1.0",
-    "drupal/entity_browser": "^2.5",
-    "drupal/entity_embed": "^1.0",
-    "drupal/environment_indicator": "~4.0.0",
-    "drupal/eu_cookie_compliance": "^1.19",
-    "drupal/fast_404": "2.x-dev",
-    "drupal/field_group": "^3.0",
-    "drupal/field_hidden": "^2.0",
-    "drupal/field_tools": "dev-1.x",
-    "drupal/focal_point": "^1.0",
-    "drupal/gin": "^3.0@alpha",
-    "drupal/gtm": "^1.6",
-    "drupal/http_cache_control": "^2.0",
-    "drupal/imageapi_optimize": "~4.0.0@beta",
-    "drupal/imageapi_optimize_gd": "^2.0@beta",
-    "drupal/imageapi_optimize_tinypng": "^1.1@beta",
-    "drupal/imageapi_optimize_webp": "2.x-dev",
-    "drupal/inline_block_title_automatic": "^1.0",
-    "drupal/inline_entity_form": "^1.0",
-    "drupal/layout_builder_browser": "^1.1",
-    "drupal/layout_builder_iframe_modal": "^1.2",
-    "drupal/layout_builder_limit": "1.0.x-dev@dev",
-    "drupal/layout_builder_lock": "^1.1",
-    "drupal/layout_builder_modal": "^1.1",
-    "drupal/layout_builder_restrictions": "^2.7",
-    "drupal/lazy": "^3.4",
-    "drupal/lb_claro": "^1.0@beta",
-    "drupal/link_attributes": "^1.0",
-    "drupal/linkit": "~6.0.0@beta",
-    "drupal/login_security": "^2.0",
-    "drupal/mailsystem": "^4.0",
-    "drupal/markup": "^1.0",
-    "drupal/media_responsive_thumbnail": "^1.0",
-    "drupal/memcache": "^2.0",
-    "drupal/menu_block": "^1.0",
-    "drupal/metatag": "^1.0",
-    "drupal/name": "^1.0",
-    "drupal/node_revision_delete": "^1.0@RC",
-    "drupal/paragon_adminkit": "^1.0@alpha",
-    "drupal/paragon_themekit": "^1.0@alpha",
-    "drupal/paragraphs": "^1.0",
-    "drupal/paragraphs_browser": "^1.0",
-    "drupal/path_redirect_import": "^1.0@beta",
-    "drupal/pathauto": "^1.0",
-    "drupal/purge": "^3.0@beta",
-    "drupal/quick_node_clone": "^1.15",
-    "drupal/quicklink": "^2.0",
-    "drupal/redirect": "^1.0",
-    "drupal/redis": "^1.5",
-    "drupal/robotstxt": "^1.4",
-    "drupal/scheduler": "^1.0",
-    "drupal/scheduler_content_moderation_integration": "^1.3",
-    "drupal/search_api": "^1.0",
-    "drupal/search_api_solr": "^4.0",
-    "drupal/seckit": "~2.0.0@RC",
-    "drupal/security_review": "^1.0",
-    "drupal/shield": "^1.0",
-    "drupal/simple_sitemap": "^4.0",
-    "drupal/site_settings": "^1.0",
-    "drupal/sitemap": "^2.0@beta",
-    "drupal/smart_trim": "^1.0",
-    "drupal/svg_image_field": "^2.1",
-    "drupal/svg_upload_sanitizer": "^1.0@alpha",
-    "drupal/swiftmailer": "^2.0",
-    "drupal/system_status": "^2.0",
-    "drupal/twig_field_value": "~2.0.0",
-    "drupal/twig_tweak": "^3.1",
-    "drupal/ultimate_cron": "^2.0",
-    "drupal/username_enumeration_prevention": "^1.1",
-    "drupal/views_bulk_edit": "^2.0",
-    "drupal/views_bulk_operations": "^4.0",
-    "drush/drush": "^11",
-    "npm-asset/jquery-ui-touch-punch": "dev-master",
-    "oomphinc/composer-installers-extender": "^2.0",
-    "platformsh/config-reader": "^2.4"
-  },
-  "conflict": {
-    "drupal/drupal": "*"
-  },
-  "config": {
-    "allow-plugins": {
-      "composer/installers": true,
-      "cweagans/composer-patches": true,
-      "drupal/core-composer-scaffold": true,
-      "oomphinc/composer-installers-extender": true
+    "name": "drupal/drupal.nl",
+    "description": "Drupal 9 powered website for Drupal Dutch Association",
+    "type": "drupal-project",
+    "homepage": "https://drupal.nl",
+    "require": {
+        "bower-asset/chosen": "^1.8",
+        "bower-asset/lazysizes": "^5.2",
+        "composer/installers": "^1.10",
+        "cweagans/composer-patches": "~1.0",
+        "drupal/address": "^1.0",
+        "drupal/address_map_link": "^1.2",
+        "drupal/admin_toolbar": "^3.0",
+        "drupal/advagg": "^4.0",
+        "drupal/allowed_formats": "^1.1",
+        "drupal/backup_migrate": "^5.0@RC",
+        "drupal/better_exposed_filters": "^5.0@beta",
+        "drupal/block_field": "^1.0@alpha",
+        "drupal/chosen": "^3.0",
+        "drupal/ckeditorheight": "^1.0",
+        "drupal/components": "^2.2",
+        "drupal/config_update": "^1.0",
+        "drupal/core-composer-scaffold": "^9.3",
+        "drupal/core-recommended": "^9.3",
+        "drupal/csv_serialization": "^2.0@beta",
+        "drupal/devel": "^4.0",
+        "drupal/draggableviews": "^2.0",
+        "drupal/embed": "^1.0",
+        "drupal/entity": "^1.0",
+        "drupal/entity_browser": "^2.5",
+        "drupal/entity_embed": "^1.0",
+        "drupal/environment_indicator": "~4.0.0",
+        "drupal/eu_cookie_compliance": "^1.19",
+        "drupal/fast_404": "2.x-dev",
+        "drupal/field_group": "^3.0",
+        "drupal/field_hidden": "^2.0",
+        "drupal/field_tools": "dev-1.x",
+        "drupal/focal_point": "^1.0",
+        "drupal/gin": "^3.0@alpha",
+        "drupal/gtm": "^1.6",
+        "drupal/http_cache_control": "^2.0",
+        "drupal/imageapi_optimize": "~4.0.0@beta",
+        "drupal/imageapi_optimize_gd": "^2.0@beta",
+        "drupal/imageapi_optimize_tinypng": "^1.1@beta",
+        "drupal/imageapi_optimize_webp": "2.x-dev",
+        "drupal/inline_block_title_automatic": "^1.0",
+        "drupal/inline_entity_form": "^1.0",
+        "drupal/layout_builder_browser": "^1.1",
+        "drupal/layout_builder_iframe_modal": "^1.2",
+        "drupal/layout_builder_limit": "1.0.x-dev@dev",
+        "drupal/layout_builder_lock": "^1.1",
+        "drupal/layout_builder_modal": "^1.1",
+        "drupal/layout_builder_restrictions": "^2.7",
+        "drupal/lazy": "^3.4",
+        "drupal/lb_claro": "^1.0@beta",
+        "drupal/link_attributes": "^1.0",
+        "drupal/linkit": "~6.0.0@beta",
+        "drupal/login_security": "^2.0",
+        "drupal/mailsystem": "^4.0",
+        "drupal/markup": "^1.0",
+        "drupal/media_responsive_thumbnail": "^1.0",
+        "drupal/memcache": "^2.0",
+        "drupal/menu_block": "^1.0",
+        "drupal/metatag": "^1.0",
+        "drupal/name": "^1.0",
+        "drupal/node_revision_delete": "^1.0@RC",
+        "drupal/paragon_adminkit": "^1.0@alpha",
+        "drupal/paragon_themekit": "^1.0@alpha",
+        "drupal/paragraphs": "^1.0",
+        "drupal/paragraphs_browser": "^1.0",
+        "drupal/path_redirect_import": "^1.0@beta",
+        "drupal/pathauto": "^1.0",
+        "drupal/purge": "^3.0@beta",
+        "drupal/quick_node_clone": "^1.15",
+        "drupal/quicklink": "^2.0",
+        "drupal/redirect": "^1.0",
+        "drupal/redis": "^1.5",
+        "drupal/robotstxt": "^1.4",
+        "drupal/scheduler": "^1.0",
+        "drupal/scheduler_content_moderation_integration": "^1.3",
+        "drupal/search_api": "^1.0",
+        "drupal/search_api_solr": "^4.0",
+        "drupal/seckit": "~2.0.0@RC",
+        "drupal/security_review": "^1.0",
+        "drupal/shield": "^1.0",
+        "drupal/simple_sitemap": "^4.0",
+        "drupal/site_settings": "^1.0",
+        "drupal/sitemap": "^2.0@beta",
+        "drupal/smart_trim": "^1.0",
+        "drupal/svg_image_field": "^2.1",
+        "drupal/svg_upload_sanitizer": "^1.0@alpha",
+        "drupal/swiftmailer": "^2.0",
+        "drupal/system_status": "^2.0",
+        "drupal/twig_field_value": "~2.0.0",
+        "drupal/twig_tweak": "^3.1",
+        "drupal/ultimate_cron": "^2.0",
+        "drupal/username_enumeration_prevention": "^1.1",
+        "drupal/views_bulk_edit": "^2.0",
+        "drupal/views_bulk_operations": "^4.0",
+        "drush/drush": "^11",
+        "npm-asset/jquery-ui-touch-punch": "^0.2.3",
+        "oomphinc/composer-installers-extender": "^2.0",
+        "platformsh/config-reader": "^2.4"
     },
-    "platform-check": false,
-    "sort-packages": true
-  },
-  "extra": {
-    "composer-exit-on-patch-failure": true,
-    "drupal-scaffold": {
-      "file-mapping": {
-        "[web-root]/.editorconfig": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/editorconfig"
+    "conflict": {
+        "drupal/drupal": "*"
+    },
+    "repositories": {
+        "_assets": {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
         },
-        "[web-root]/.gitattributes": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/gitattributes"
-        },
-        "[web-root]/.htaccess": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/htaccess"
-        },
-        "[web-root]/robots.txt": false,
-        "[web-root]/sites/default/cloud-memcache-d8+.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/cloud-memcache-d8+.php"
-        },
-        "[web-root]/sites/default/services.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/default.services.yml"
-        },
-        "[web-root]/sites/default/settings.acquia.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/settings.acquia.php"
-        },
-        "[web-root]/sites/default/settings.fast404.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/settings.fast404.php"
-        },
-        "[web-root]/sites/default/settings.lando.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/settings.lando.php"
-        },
-        "[web-root]/sites/default/settings.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/settings.php"
-        },
-        "[web-root]/sites/default/settings.platformsh.php": {
-          "mode": "replace",
-          "overwrite": false,
-          "path": "assets/scaffold/files/settings.platformsh.php"
+        "_drupal": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
         }
-      },
-      "locations": {
-        "web-root": "./docroot"
-      }
     },
-    "enable-patching": true,
-    "installer-paths": {
-      "docroot/core": [
-        "type:drupal-core"
-      ],
-      "docroot/libraries/{$name}": [
-        "type:drupal-library",
-        "type:bower-asset",
-        "type:npm-asset"
-      ],
-      "docroot/modules/contrib/{$name}": [
-        "type:drupal-module"
-      ],
-      "docroot/profiles/contrib/{$name}": [
-        "type:drupal-profile"
-      ],
-      "docroot/themes/contrib/{$name}": [
-        "type:drupal-theme"
-      ],
-      "drush/contrib/{$name}": [
-        "type:drupal-drush"
-      ]
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Lemberg\\Draft\\Template\\": "src/"
+        }
     },
-    "installer-types": [
-      "bower-asset",
-      "npm-asset"
-    ],
-    "patchLevel": {
-      "drupal/core": "-p2"
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "cweagans/composer-patches": true,
+            "drupal/core-composer-scaffold": true,
+            "oomphinc/composer-installers-extender": true,
+            "lemberg/draft-environment": true
+        },
+        "platform": {
+            "php": "8.0.2"
+        },
+        "sort-packages": true
     },
-    "patches": {
-      "drupal/core": {
-        "Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch",
-        "Reverting entity revisions that contain custom blocks erroneously triggers EntityChangedConstraint": "https://www.drupal.org/files/issues/2021-04-06/3053881-3049332-45.patch"
-      },
-      "drupal/draggableviews": {
-        "Error adding or editing the field Draggableviews: Content": "https://www.drupal.org/files/issues/2022-01-13/error-adding-or-editing-the-field-draggableviews-content-1.patch",
-        "Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
-      },
-      "drupal/paragraphs": {
-        "Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
-        "Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
-      }
+    "extra": {
+        "composer-exit-on-patch-failure": true,
+        "drupal-scaffold": {
+            "gitignore": false,
+            "locations": {
+                "web-root": "./docroot"
+            }
+        },
+        "enable-patching": true,
+        "installer-paths": {
+            "docroot/core": [
+                "type:drupal-core"
+            ],
+            "docroot/libraries/{$name}": [
+                "type:drupal-library",
+                "type:bower-asset",
+                "type:npm-asset"
+            ],
+            "docroot/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "docroot/modules/custom/{$name}": [
+                "type:drupal-custom-module"
+            ],
+            "docroot/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "docroot/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "docroot/themes/custom/{$name}": [
+                "type:drupal-custom-theme"
+            ],
+            "drush/Commands/contrib/{$name}": [
+                "type:drupal-drush"
+            ]
+        },
+        "installer-types": [
+            "bower-asset",
+            "npm-asset"
+        ],
+        "patchLevel": {
+            "drupal/core": "-p2"
+        },
+        "patches": {
+            "drupal/core": {
+                "Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch",
+                "Reverting entity revisions that contain custom blocks erroneously triggers EntityChangedConstraint": "https://www.drupal.org/files/issues/2021-04-06/3053881-3049332-45.patch"
+            },
+            "drupal/draggableviews": {
+                "Error adding or editing the field Draggableviews: Content": "https://www.drupal.org/files/issues/2022-01-13/error-adding-or-editing-the-field-draggableviews-content-1.patch",
+                "Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
+            },
+            "drupal/paragraphs": {
+                "Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
+                "Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
+            }
+        }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Lemberg\\Draft\\Template\\DrupalProject::createRequiredFiles",
+            "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
+        ],
+        "post-update-cmd": [
+            "Lemberg\\Draft\\Template\\DrupalProject::createRequiredFiles",
+            "Lemberg\\Draft\\Template\\DrupalProject::localSetup"
+        ]
+    },
+    "require-dev": {
+        "lemberg/draft-environment": "^3.6"
     }
-  },
-  "autoload": {
-    "classmap": [
-      "scripts/composer/ScriptHandler.php"
-    ]
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packages.drupal.org/8"
-    },
-    {
-      "type": "composer",
-      "url": "https://asset-packagist.org"
-    }
-  ],
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "post-install-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredDirectories",
-      "DrupalProject\\composer\\ScriptHandler::themeStartkitCopy"
-    ],
-    "post-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredDirectories",
-      "DrupalProject\\composer\\ScriptHandler::themeStartkitCopy"
-    ]
-  }
 }
