--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -9,7 +9,6 @@ module:
   advagg: 0
   advagg_js_minify: 0
   allowed_formats: 0
-  backup_migrate: 0
   ban: 0
   better_exposed_filters: 0
   big_pipe: 0
@@ -33,7 +32,6 @@ module:
   ctools: 0
   datetime: 0
   datetime_range: 0
-  dblog: 0
   dnl_layouts: 0
   draggableviews: 0
   dynamic_page_cache: 0
@@ -45,7 +43,6 @@ module:
   entity_embed: 0
   entity_reference_revisions: 0
   environment_indicator: 0
-  fast404: 0
   field: 0
   field_group: 0
   field_hidden: 0
@@ -56,7 +53,6 @@ module:
   focal_point: 0
   gin_toolbar: 0
   gtm: 0
-  help: 0
   http_cache_control: 0
   image: 0
   imageapi_optimize: 0
@@ -84,14 +80,13 @@ module:
   link: 0
   link_attributes: 0
   linkit: 0
+  locale: 0
   login_security: 0
   mailsystem: 0
   markup: 0
   media: 0
   media_library: 0
   media_responsive_thumbnail: 0
-  memcache: 0
-  memcache_admin: 0
   menu_block: 0
   menu_link_content: 0
   menu_ui: 0
@@ -124,10 +119,10 @@ module:
   site_settings: 0
   sitemap: 0
   smart_trim: 0
+  stage_file_proxy: 0
   svg_image_field: 0
   svg_upload_sanitizer: 0
   swiftmailer: 0
-  syslog: 0
   system: 0
   system_status: 0
   taxonomy: 0
@@ -143,7 +138,6 @@ module:
   username_enumeration_prevention: 0
   views_bulk_edit: 0
   views_bulk_operations: 0
-  views_ui: 0
   workflows: 0
   pathauto: 1
   views: 10
@@ -154,7 +148,6 @@ theme:
   stable: 0
   classy: 0
   claro: 0
-  seven: 0
   gin: 0
   paragon_adminkit: 0
   paragon_themekit: 0
