COD-44 Add missing sort on taxonomy for partners

--- a/config/default/views.view.partners.yml
+++ b/config/default/views.view.partners.yml
@@ -284,6 +284,19 @@ display:
           hide_alter_empty: true
           view_mode: teaser
       sorts:
+        field_category_target_id:
+          id: field_category_target_id
+          table: node__field_category
+          field: field_category_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
         weight:
           id: weight
           table: draggableviews_structure
