--- a/config/default/views.view.partners.yml
+++ b/config/default/views.view.partners.yml
@@ -24,7 +24,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: ''
+      title: 'Onze partners in Nederland'
       fields:
         title:
           id: title
