COD-42 Adjust caching settings

--- a/config/default/system.performance.yml
+++ b/config/default/system.performance.yml
@@ -3,7 +3,7 @@ _core:
 langcode: nl
 cache:
   page:
-    max_age: 2764800
+    max_age: 3600
   http:
     max_age: '86400'
     404_max_age: '86400'
