--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -6,6 +6,7 @@ module:
   address: 0
   address_map_link: 0
   admin_toolbar: 0
+  admin_toolbar_tools: 0
   advagg: 0
   advagg_js_minify: 0
   allowed_formats: 0
