COD-42 Disable scaffolding of robots.txt

--- a/composer.json
+++ b/composer.json
@@ -139,6 +139,9 @@
             "gitignore": false,
             "locations": {
                 "web-root": "./docroot"
+            },
+            "file-mapping": {
+               "[web-root]/robots.txt": false
             }
         },
         "enable-patching": true,
