COD-44 Fix remote video display in CKEditor

--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -161,6 +161,12 @@ layout--twocol:
   css:
     theme:
       dist/css/twocol-layout.css: {}
+media--type--remote-video:
+  dependencies:
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/media--remote-video.css: {}
 node--type--case--simple-teaser:
   dependencies:
     - themekit/themekit
