--- a/docroot/themes/custom/themekit/themekit.info.yml
+++ b/docroot/themes/custom/themekit/themekit.info.yml
@@ -20,6 +20,7 @@ libraries-override:
         css/components/more-link.css: false
         css/components/breadcrumb.css: false
         css/components/pager.css: false
+  filter/caption: false
 
 components:
   namespaces:
