--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "drupal/eu_cookie_compliance": "^1.19",
         "drupal/field_group": "^3.0",
         "drupal/field_hidden": "^2.0",
-        "drupal/field_tools": "dev-1.x",
+        "drupal/field_tools": "^1.0@alpha",
         "drupal/focal_point": "^1.0",
         "drupal/gin": "^3.0@alpha",
         "drupal/gtm": "^1.6",
@@ -40,12 +40,12 @@
         "drupal/imageapi_optimize": "~4.0.0@beta",
         "drupal/imageapi_optimize_gd": "^2.0@beta",
         "drupal/imageapi_optimize_tinypng": "^1.1@beta",
-        "drupal/imageapi_optimize_webp": "2.x-dev",
+        "drupal/imageapi_optimize_webp": "^2.0@beta",
         "drupal/inline_block_title_automatic": "^1.0",
         "drupal/inline_entity_form": "^1.0",
         "drupal/layout_builder_browser": "^1.1",
         "drupal/layout_builder_iframe_modal": "^1.2",
-        "drupal/layout_builder_limit": "1.0.x-dev@dev",
+        "drupal/layout_builder_limit": "^1.0@beta",
         "drupal/layout_builder_lock": "^1.1",
         "drupal/layout_builder_restrictions": "^2.7",
         "drupal/lazy": "^3.4",
