--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -295,6 +295,9 @@ views--news:
   dependencies:
     - themekit/common--glide
     - themekit/themekit
+  css:
+    theme:
+      dist/css/view--news--listing.css: {}
 views--partners:
   dependencies:
     - themekit/themekit
