--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/login_security": "^2.0",
         "drupal/mailsystem": "^4.0",
         "drupal/markup": "^1.0",
+        "drupal/matomo": "^1.19",
         "drupal/media_responsive_thumbnail": "^1.0",
         "drupal/menu_block": "^1.0",
         "drupal/metatag": "^1.0",
