--- a/config/default/metatag.metatag_defaults.global.yml
+++ b/config/default/metatag.metatag_defaults.global.yml
@@ -10,11 +10,12 @@ tags:
   abstract: 'Drupal, hét open source DXP'
   description: 'Drupal, hét open source DXP'
   keywords: 'Drupal, dxp, opensource, cms'
-  title: '[current-page:title] | [site:name]'
   og_description: '[node:summary]'
+  og_image: '[node:field_image:entity:field_media_image:entity:url]'
   og_site_name: '[site:name]'
   og_title: '[node:title]'
   og_url: '[node:url:absolute]'
+  title: '[current-page:title] | [site:name]'
   twitter_cards_description: '[node:summary]'
   twitter_cards_page_url: '[node:url:absolute]'
   twitter_cards_title: '[node:title]'
