--- a/config/default/matomo.settings.yml
+++ b/config/default/matomo.settings.yml
@@ -50,7 +50,7 @@ custom:
       value: ''
       scope: visit
 codesnippet:
-  before: "var _paq = window._paq = window._paq || [];\r\n /* tracker methods like \"setCustomDimension\" should be called before \"trackPageView\" */\r\n _paq.push(['trackPageView']);\r\n _paq.push(['enableLinkTracking']);\r\n (function() {\r\n   var u=\"https://drupal.matomo.cloud/\";\r\n   _paq.push(['setTrackerUrl', u+'matomo.php']);\r\n   _paq.push(['setSiteId', '1']);\r\n   var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];\r\n   g.async=true; g.src='//cdn.matomo.cloud/drupal.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);\r\n })();"
+  before: ''
   after: ''
 translation_set: false
 disable_tracking: false
