--- a/.github/workflows/update-mini-db-dump.yml
+++ b/.github/workflows/update-mini-db-dump.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   update-mini-db-dump:
     name: maintenance
-    uses: lembergsolutions/automation/.github/workflows/update-mini-db-dump.yml@main
-    secrets:
-      PHP_VERSION: ${{ secrets.PHP_VERSION }}
-      COMPOSER_VERSION: ${{ secrets.COMPOSER_VERSION }}
+    uses: lembergsolutions/automation/.github/workflows/update-mini-db-dump.yml@2.x
+    with:
+      php_version: ${{ vars.PHP_VERSION }}
+      composer_version: ${{ vars.COMPOSER_VERSION }}
