--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -9,9 +9,6 @@ on:
       - main
       - update-dependencies
 
-concurrency:
-  group: ${{ github.base_ref }}
-
 permissions:
   contents: write
   pull-requests: write
@@ -20,31 +17,30 @@ jobs:
   metadata:
     name: dependabot
     if: ${{ startsWith(github.head_ref, 'dependabot') }}
-    uses: lembergsolutions/automation/.github/workflows/dependabot-metadata.yml@main
+    uses: lembergsolutions/automation/.github/workflows/dependabot-metadata.yml@2.x
 
   composer:
     name: dependabot
-    if: ${{ needs.metadata.outputs.package_manager == 'composer' }}
+    if: ${{ needs.metadata.outputs.package-ecosystem == 'composer' }}
     needs: metadata
-    uses: lembergsolutions/automation/.github/workflows/dependabot-composer.yml@main
+    uses: lembergsolutions/automation/.github/workflows/dependabot-composer.yml@2.x
     with:
+      php_version: ${{ vars.PHP_VERSION }}
+      composer_version: ${{ vars.COMPOSER_VERSION }}
+      dependency_name: ${{ needs.metadata.outputs.dependency-name }}
       head_ref: ${{ github.head_ref }}
-      dependency_name: ${{ needs.metadata.outputs.dependency_name }}
-    secrets:
-      PHP_VERSION: ${{ secrets.PHP_VERSION }}
-      COMPOSER_VERSION: ${{ secrets.COMPOSER_VERSION }}
 
   composer-lock-diff:
     name: dependabot
     if: ${{ startsWith(github.head_ref, 'dependabot') }}
     needs: composer
-    uses: lembergsolutions/automation/.github/workflows/composer-lock-diff.yml@main
-    secrets:
-      PHP_VERSION: ${{ secrets.PHP_VERSION }}
-      COMPOSER_VERSION: ${{ secrets.COMPOSER_VERSION }}
+    uses: lembergsolutions/automation/.github/workflows/composer-lock-diff.yml@2.x
+    with:
+      php_version: ${{ vars.PHP_VERSION }}
+      composer_version: ${{ vars.COMPOSER_VERSION }}
 
   automerge:
     name: dependabot
-    if: ${{ startsWith(github.head_ref, 'dependabot') }}
+    if: ${{ startsWith(github.head_ref, 'dependabot') && (needs.metadata.outputs.update-type == 'version-update:semver-minor' || needs.metadata.outputs.update-type == 'version-update:semver-patch') }}
     needs: composer-lock-diff
-    uses: lembergsolutions/automation/.github/workflows/automerge.yml@main
+    uses: lembergsolutions/automation/.github/workflows/automerge.yml@2.x
