--- a/.github/workflows/rebase-dependent-branches.yml
+++ b/.github/workflows/rebase-dependent-branches.yml
@@ -6,6 +6,6 @@ on:
 
 jobs:
   rebase:
-    uses: lembergsolutions/automation/.github/workflows/rebase-dependent-branches.yml@main
+    uses: lembergsolutions/automation/.github/workflows/rebase-dependent-branches.yml@2.x
     with:
       dependent_branch: update-dependencies
