--- a/config/default/views.settings.yml
+++ b/config/default/views.settings.yml
@@ -1,8 +1,7 @@
 _core:
   default_config_hash: RaRd9EIcwA4u3qCSRLL8EnCicbda1kV__ASmVbyehvQ
 langcode: nl
-display_extenders:
-  - matomo
+display_extenders: {  }
 skip_cache: false
 sql_signature: false
 ui:
