--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -11,5 +11,5 @@ page:
   front: /node/3
 admin_compact_mode: false
 weight_select_max: 100
-default_langcode: nl
+default_langcode: en
 mail_notification: ''
