Remove TinyPNG API key from configuration

--- a/config/default/imageapi_optimize.pipeline.default.yml
+++ b/config/default/imageapi_optimize.pipeline.default.yml
@@ -12,7 +12,7 @@ processors:
   af79d43c-9191-4221-9c38-fa76da260bde:
     id: tinypng
     data:
-      api_key: jdnLw3kdMF74nhHRTnzJj58lh0NhCnDT
+      api_key: _redacted_
     weight: 1
     uuid: af79d43c-9191-4221-9c38-fa76da260bde
   273d571a-1c49-4fc7-a67e-a0a83c71c0d2:
