--- a/composer.json
+++ b/composer.json
@@ -19,31 +19,32 @@
         }
     },
     "require": {
-        "bower-asset/lazysizes": "^5.2",
-        "composer/installers": "^2.2",
-        "cweagans/composer-patches": "~1.0",
+        "bower-asset/lazysizes": "^5.3",
+        "composer/installers": "^2.0",
+        "cweagans/composer-patches": "^1.7",
         "drupal/address": "^1.0",
         "drupal/address_map_link": "^1.2",
         "drupal/admin_toolbar": "^3.0",
-        "drupal/advagg": "^5.0",
+        "drupal/advagg": "^6.0@alpha",
         "drupal/allowed_formats": "^2.0",
         "drupal/better_exposed_filters": "^6.0@beta",
         "drupal/block_field": "^1.0@alpha",
         "drupal/chosen": "^4.0",
         "drupal/ckeditorheight": "^1.0",
         "drupal/classy": "^1.0",
-        "drupal/components": "^2.2",
+        "drupal/components": "^3.0@beta",
         "drupal/config_split": "^1.9",
-        "drupal/config_update": "^1.0",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-recommended": "^9.3",
-        "drupal/csv_serialization": "^2.0@beta",
+        "drupal/config_update": "^2.0@alpha",
+        "drupal/core-composer-scaffold": "^10.1",
+        "drupal/core-recommended": "^10.1",
+        "drupal/csv_serialization": "^4.0",
+        "drupal/default_content": "^2.0@alpha",
         "drupal/draggableviews": "^2.0",
         "drupal/embed": "^1.0",
         "drupal/entity": "^1.0",
         "drupal/entity_browser": "^2.5",
         "drupal/entity_embed": "^1.0",
-        "drupal/environment_indicator": "~4.0.0",
+        "drupal/environment_indicator": "^4.0",
         "drupal/eu_cookie_compliance": "^1.19",
         "drupal/field_group": "^3.0",
         "drupal/field_hidden": "^2.0",
@@ -64,7 +65,7 @@
         "drupal/layout_builder_lock": "^1.1",
         "drupal/layout_builder_restrictions": "^2.7",
         "drupal/lazy": "^3.4",
-        "drupal/lb_claro": "^1.0@beta",
+        "drupal/lb_claro": "^2.0@alpha",
         "drupal/link_attributes": "^2.0",
         "drupal/linkit": "~6.0.0-beta4@beta",
         "drupal/login_security": "^2.0",
@@ -83,8 +84,8 @@
         "drupal/redirect": "^1.0",
         "drupal/redis": "^1.5",
         "drupal/robotstxt": "^1.4",
-        "drupal/scheduler": "^1.0",
-        "drupal/scheduler_content_moderation_integration": "^1.3",
+        "drupal/scheduler": "^2.0",
+        "drupal/scheduler_content_moderation_integration": "^2.0@beta",
         "drupal/seckit": "~2.0.0@RC",
         "drupal/security_review": "^2.0",
         "drupal/simple_sitemap": "^4.0",
@@ -93,8 +94,8 @@
         "drupal/smart_trim": "^2.0",
         "drupal/svg_image_field": "^2.1",
         "drupal/svg_upload_sanitizer": "^1.0@alpha",
-        "drupal/swiftmailer": "^2.0",
-        "drupal/system_status": "^2.0",
+        "drupal/swiftmailer": "2.x-dev@dev",
+        "drupal/system_status": "2.x-dev@dev",
         "drupal/twig_field_value": "~2.0.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/ultimate_cron": "^2.0",
