--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/chosen": "^4.0",
         "drupal/ckeditorheight": "^1.0",
         "drupal/classy": "^1.0",
+        "drupal/color": "^1.0",
         "drupal/components": "^3.0@beta",
         "drupal/config_split": "^1.9",
         "drupal/config_update": "^2.0@alpha",
@@ -94,6 +95,7 @@
         "drupal/paragraphs_browser": "^1.0",
         "drupal/pathauto": "^1.0",
         "drupal/quicklink": "^2.0",
+        "drupal/rdf": "^2.0",
         "drupal/redirect": "^1.0",
         "drupal/redis": "^1.5",
         "drupal/robotstxt": "^1.4",
