Stick to the standard web-root declaration

--- a/composer.json
+++ b/composer.json
@@ -151,10 +151,10 @@
         "drupal-scaffold": {
             "gitignore": false,
             "locations": {
-                "web-root": "./docroot"
+                "web-root": "docroot/"
             },
             "file-mapping": {
-               "[web-root]/robots.txt": false
+                "[web-root]/robots.txt": false
             }
         },
         "enable-patching": true,
