Add drupal-check to require-dev

--- a/composer.json
+++ b/composer.json
@@ -229,6 +229,7 @@
     "require-dev": {
         "drupal/devel": "^5.1",
         "drupal/stage_file_proxy": "^2.1",
+        "mglaman/drupal-check": "^1.4",
         "lemberg/draft-environment": "^3.6"
     }
 }
