--- a/composer.json
+++ b/composer.json
@@ -198,8 +198,7 @@
         },
         "patches": {
             "drupal/core": {
-                "Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch",
-                "Reverting entity revisions that contain custom blocks erroneously triggers EntityChangedConstraint": "https://www.drupal.org/files/issues/2021-04-06/3053881-3049332-45.patch"
+                "Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch"
             },
             "drupal/draggableviews": {
                 "Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
