--- a/composer.json
+++ b/composer.json
@@ -198,17 +198,17 @@
         },
         "patches": {
             "drupal/core": {
-                "Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch"
+                "[#3171835] Field Groups marked as required are missing red asterisk": "https://www.drupal.org/files/issues/2020-09-18/required-asterisk-missing--3171835--2.patch"
             },
             "drupal/draggableviews": {
-                "Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
+                "[#2867348] Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
             },
             "drupal/paragraphs": {
-                "Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
-                "Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
+                "[#2901390] Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
+                "[#3090200] Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
             },
             "drupal/ultimate_cron": {
-                "[#3370283-3] PHP 8.2 / CronRule.php does not handle all variables properly / https://www.drupal.org/project/ultimate_cron/issues/3370283": "https://www.drupal.org/files/issues/2023-06-26/3370283.patch"
+                "[#3370283] PHP 8.2 / CronRule.php does not handle all variables properly": "https://www.drupal.org/files/issues/2023-06-26/3370283.patch"
             },
             "drupal/views_bulk_edit": {
                 "[#3024419] Fix Required fields to really not be required": "https://www.drupal.org/files/issues/2022-06-07/views_bulk_edit-fix_required_fields-3024419-29.patch"
