--- a/composer.json
+++ b/composer.json
@@ -203,6 +203,9 @@
             "drupal/draggableviews": {
                 "[#2867348] Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
             },
+            "drupal/lb_claro": {
+                "[#3352302] preg_match(): Passing null to parameter #2 ($subject) of type string is deprecated": "https://www.drupal.org/files/issues/2023-04-05/Deprecated_function_preg_match_3352302_7_0.patch"
+            },
             "drupal/paragraphs": {
                 "[#2901390] Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
                 "[#3090200] Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
