Fixes lazy php 8.2 compatibility

--- a/composer.json
+++ b/composer.json
@@ -199,6 +199,9 @@
             "drupal/draggableviews": {
                 "[#2867348] Not working with Group By feature": "https://www.drupal.org/files/issues/2021-10-11/not_working_with_group_by-draggableviews-2867348-48.patch"
             },
+            "drupal/lazy": {
+                "[#3403052] PHP 8.2: ${var} string interpolation deprecated": "https://www.drupal.org/files/issues/2023-11-23/string_interpolation_deprecated-3403052-4.patch"
+            },
             "drupal/lb_claro": {
                 "[#3352302] preg_match(): Passing null to parameter #2 ($subject) of type string is deprecated": "https://www.drupal.org/files/issues/2023-04-05/Deprecated_function_preg_match_3352302_7_0.patch"
             },
