--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -89,6 +89,7 @@ module:
   login_security: 0
   mailsystem: 0
   markup: 0
+  matomo: 0
   media: 0
   media_library: 0
   media_responsive_thumbnail: 0
@@ -108,6 +109,7 @@ module:
   paragraphs_browser: 0
   path: 0
   path_alias: 0
+  phpass: 0
   quicklink: 0
   rdf: 0
   redirect: 0
