--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -84,6 +84,7 @@ module:
   login_security: 0
   mailsystem: 0
   markup: 0
+  matomo: 0
   media: 0
   media_library: 0
   media_responsive_thumbnail: 0
@@ -103,6 +104,7 @@ module:
   paragraphs_browser: 0
   path: 0
   path_alias: 0
+  phpass: 0
   quicklink: 0
   redirect: 0
   redirect_404: 0
